users can now sign up

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
     <title></title>
     <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="https://sdks.shopifycdn.com/polaris/1.14.1/polaris.min.css" />
 
 </head>
 <title></title>
