coming soon and mailing list sorted

--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!doctype html>
 <head>
-    <title></title>
+    <title>Parka</title>
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="https://sdks.shopifycdn.com/polaris/1.14.1/polaris.min.css" />
+    <link rel="icon"
+      type="png"
+      href="/logo/favicon.png">
 
 </head>
 <title></title>
