shopify linked, home page mostly done and initial shop items added

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <head>
     <title>Parka</title>
     <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href="https://sdks.shopifycdn.com/polaris/1.14.1/polaris.min.css" />
+    <!-- <link rel="stylesheet" href="https://sdks.shopifycdn.com/polaris/1.14.1/polaris.min.css" /> -->
+
     <link rel="icon"
       type="png"
       href="/logo/favicon.png">
