--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <title>Parka</title>
     <link rel="stylesheet" href="/style.css">
-    <!-- <link rel="stylesheet" href="https://sdks.shopifycdn.com/polaris/1.14.1/polaris.min.css" /> -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:600,700" rel="stylesheet">
 
     <link rel="icon"
       type="png"
