--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <title>Parka</title>
     <link rel="stylesheet" href="/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:600,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet">
 
     <link rel="icon"
       type="png"
