--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
       type="png"
       href="/logo/favicon.png">
 
+      <meta property="og:title" content="Parka" />
+      <meta property="og:type" content="Record Label" />
+      <meta property="og:image" content="https://s31.postimg.cc/8csz5ktwb/blacklogosquare.png" />
+      <meta property="og:url" content="http://www.parka.world/" />
+
 </head>
 <title></title>
 <main></main>
