world updates with descriptions added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
       <meta property="og:title" content="Parka" />
       <meta property="og:type" content="Record Label" />
-      <meta property="og:image" content="https://s31.postimg.cc/8csz5ktwb/blacklogosquare.png" />
+      <meta property="og:image" content="public/logo/favicon.png" />
       <meta property="og:url" content="http://www.parka.world/" />
 
 </head>
