changes per client

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <head>
-    <title>Parka</title>
+    <title>parka</title>
     <link rel="stylesheet" href="/style.css">
     <link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet">
 
@@ -8,7 +8,7 @@
       type="png"
       href="/logo/favicon.png">
 
-      <meta property="og:title" content="Parka" />
+      <meta property="og:title" content="parka" />
       <meta property="og:type" content="Record Label" />
       <meta property="og:image" content="/logo/favicon.png" />
       <meta property="og:url" content="http://www.parka.world/" />
